# compiladores

./: CMakeLists.txt  CMakeLists.txt~  parser.y  parser.y~  scanner.l  scanner.l~
DOXYGEN/: Doxyfile
DOXYGEN/html/: annotated.html  classes.html  comp__dict_8h.html  comp__dict_8h_source.html  comp__graph_8h.html  comp__graph_8h_source.html  comp__list_8h.html  comp__list_8h_source.html  comp__tree_8h.html  comp__tree_8h_source.html  doxygen.css  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_type.html  globals_vars.html  gv_8h_source.html  iks__ast_8h_source.html  index.html  main_8h.html  main_8h_source.html  (+14 more)
algoritmos/: fatorial.txt  fatorial.txt~  media.txt  teste.txt  teste.txt~  teste2.txt  teste2.txt~
include/: CodeGenerator.h  CodeGenerator.h~  ILOC.h~  Label.h  Registers.h  comp_dict.h  comp_dict.h~  comp_function.h  comp_function.h~  comp_graph.h  comp_list.h  comp_list.h~  comp_tree.h  comp_tree.h~  erros_semanticos.h  gv.h  iks_ast.h  iloc_simb.h  iloc_simb.h~  main.h  main.h~  semantic.h  semantic.h~  stack.h  tokens.h
src/: CodeGenerator.c  CodeGenerator.c~  CodeGenerator.h  Label.c  Register.c~  Registers.c  Registers.c~  comp_dict.c  comp_dict.c~  comp_function.c  comp_function.c~  comp_graph.c  comp_list.c  comp_list.c~  comp_tree.c  comp_tree.c~  gv.c  gv.c~  main.c  main.c~  semantic.c  semantic.c~  stack.c  stack.c~
tests/: dict_test.c  dict_test.c~  function_test.c  graph_test.c  lists_test.c  lists_test.c~  minha_entrada.txt  stack_test.c  stack_test.c~  tree_test.c  tree_test.c~
(+119 files in other folders)
